--- a/rutenett2.css
+++ b/rutenett2.css
@@ -1,4 +1,13 @@
-#white:hover {
+#up:hover {
+    background-color: rgb(0, 255, 13);
+}
+#left:hover {
+    background-color: rgb(0, 255, 13);
+}
+#right:hover {
+    background-color: rgb(0, 255, 13);
+}
+#down:hover {
     background-color: rgb(0, 255, 13);
 }
 
@@ -34,4 +43,5 @@ table, td {
 h1 {
     text-align: center;
     font-size: 60px;
-}
+}¨
+
